added Developer Name

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>SIMON SAYS GAME</h1>
+    <p>by MUNA.</p>
     <h2>Press any key to start.</h2>
     <div class="gamePad">
       <div class="lineOne">
