--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <h1>SIMON SAYS GAME</h1>
-    <p>by MUNA.</p>
     <h2>Press any key to start.</h2>
     <div class="gamePad">
       <div class="lineOne">
@@ -21,6 +20,10 @@
         <div type="button" class="box" id="orange"></div>
       </div>
     </div>
+    <footer>
+      <p>&copy; MUNA</p>
+
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
