added 3D effects in box and button

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div type="button" class="box" id="orange"></div>
       </div>
     </div>
+    <button class="start"><b>Start</b></button>
     <footer>
       <p>&copy; MUNA</p>
-
     </footer>
     <script src="script.js"></script>
   </body>
