MUNA is updated to MUNA.K in the bottom section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <button class="start"><b>Start</b></button>
     <footer>
-      <p>&copy; MUNA</p>
+      <p>&copy; MUNA.K</p>
     </footer>
     <script src="script.js"></script>
   </body>
