--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>simon says game</title>
-    <link rel="icon" href="/PROJECTS/Simon says/img1.jpg">
+    <link rel="icon" href="../Simon_Says/img1.jpg" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
